# handlers/add.go
@@ -9,11 +9,12 @@ import (
 // @Description	Add a new product to the data store
 // @Tags			products
 // @Success		200	{object}	data.Product	"The newly created product"
-// @Router			/ [post]
+// @Router			/products [post]
 func (p *Products) AddProduct(rw http.ResponseWriter, r *http.Request) {
 	prod := r.Context().Value(KeyProduct{}).(*data.Product)
 
 	data.AddProduct(prod)
 
+	rw.Header().Set("Content-Type", "application/json")
 	prod.ToJSON(rw)
 }
