# handlers/get.go
@@ -10,12 +10,13 @@ import (
 // @Tags			products
 // @Success		200	{object}	data.Products	"a list of products in the response"
 // @Failure		500	"Unable to marshal JSON"
-// @Router			/ [get]
+// @Router			/products [get]
 func (p *Products) GetProducts(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("Handle GET products")
 
 	// fetch the products from the data store
 	lp := data.GetProducts()
+	rw.Header().Set("Content-Type", "application/json")
 
 	// Serialize the list to JSON
 	err := lp.ToJSON(rw)
@@ -31,7 +32,7 @@ func (p *Products) GetProducts(rw http.ResponseWriter, r *http.Request) {
 // @Produce		json
 // @Success		200	{object}	data.Product	"A Product in the response"
 // @Failure		404	"Product not found"
-// @Router			/:id [get]
+// @Router			/products/:id [get]
 func (p *Products) GetProduct(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("Handle GET product")
 
@@ -45,6 +46,7 @@ func (p *Products) GetProduct(rw http.ResponseWriter, r *http.Request) {
 
 		return
 	}
+	rw.Header().Set("Content-Type", "application/json")
 
 	data.ToJSON(prod, rw)
 }
