# handlers/update.go
@@ -15,7 +15,7 @@ import (
 // @Success		200	{object}	data.Product	"Product after update"
 // @Failure		404	"Product not found"
 // @Failure		500	"Product not found"
-// @Router			/:id [put]
+// @Router			/products/:id [put]
 func (p *Products) UpdateProduct(rw http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id, err := strconv.Atoi(vars["id"])
@@ -40,6 +40,8 @@ func (p *Products) UpdateProduct(rw http.ResponseWriter, r *http.Request) {
 
 		return
 	}
+
+	rw.Header().Set("Content-Type", "application/json")
 
 	prod.ToJSON(rw)
 }
